--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,7 +49,9 @@ blockquote, q {
 		content: '';
 		content: none;
 	}
-
+.about{
+	color: red;
+}
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
